<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="IFC_HW" Id="{9ae663f7-5593-436c-8bb8-7fb5eec82175}">
    <Declaration><![CDATA[// In dieser GVL werden alle Variablen deklariert die auf die realen Klemmen zugreifen
VAR_GLOBAL
	// Errors 
		NoBottle			: BOOL := FALSE; // Keine Flasche vorhanden
		WrongBottle			: BOOL := FALSE; // Flasche falsch gedreht oder falsche Flasche
		StorageFull			: BOOL := FALSE; // Lager abgefüllte Flaschen voll
		GranulateEmpty		: BOOL := FALSE; // Füllstand Granulat zu gering
		
	// Station Statusampel	
		AmpelRot 	AT%Q* 	: BOOL;		// Signal-LED Rot
		AmpelGelb 	AT%Q* 	: BOOL;		// Signal-LED Gelb
		AmpelGrun 	AT%Q* 	: BOOL;		// Signal-LED Grun
			
	// Station Vereinzelung
		EinzelSens1 AT%I*	: BOOL;			// Separation Sensor 1
		EinzelSens2 AT%I*	: BOOL;			// Separation Sensor 2
		EinzelSens3 AT%I*	: BOOL;			// Separation Sensor 3
		R1AKT1 	AT%Q* 		: BOOL;			// Relais 1 Aktor 1
		R2AKT1 	AT%Q* 		: BOOL;			// Relais 2 Aktor 1
		R1AKT2 	AT%Q* 		: BOOL;			// Relais 1 Aktor 2
		R2AKT2 	AT%Q* 		: BOOL;			// Relais 2 Aktor 2
	
	// Station Forderband
		BandSens1 AT %I*	: BOOL;		// Forderband Sensor 1
		BandSens2 AT %I*	: BOOL;		// Forderband Sensor 2
		BandSens3 AT %I*	: BOOL;		// Forderband Sensor 3
		BandSens4 AT %I*	: BOOL;		// Forderband Sensor 4
		BandHub1 AT %Q*		: BOOL;		// Forderband Hubmagnet 1
		BandHub2 AT %Q*		: BOOL;		// Forderband Hubmagnet 1
		BandHub3 AT %Q*		: BOOL;		// Forderband Hubmagnet 1
		BandExtruder1 		: AXIS_REF;	// Forderband NC-Achse Dosiereinheit 1
		BandExtruder2 		: AXIS_REF;	// Forderband NC-Achse Dosiereinheit 2
		BandExtruder3 		: AXIS_REF;	// Forderband NC-Achse Dosiereinheit 3
		BandMotor 			: AXIS_REF;	// Forderband NC-Achse Band
		
		BandFullmenge1		: INT := 5;	// in Gramm
		BandFullmenge2		: INT := 7;	// in Gramm
		BandFullmenge3		: INT := 3;	// in Gramm
		
	//Füllstandsüberwachung
		FillSens1 AT%I*	: UINT;			// Füllstandssensor 1
		FillSens2 AT%I*	: UINT;			// Füllstandssensor 2
		FillSens3 AT%I*	: UINT;			// Füllstandssensor 3
		FillLevelPercent1	: REAL;		// Füllstand 1 in %
		FillLevelGramm1		: REAL;		// Füllstand i in g
		FillLevelPercent2	: REAL;		// Füllstand 2 in %
		FillLevelGramm2		: REAL;		// Füllstand 2 in g
		FillLevelPercent3	: REAL;		// Füllstand 3 in %
		FillLevelGramm3		: REAL;		// Füllstand 3 in g
		
		MaxFillLevel 	: REAL := 375;	// Kalibrierter Füllstand für 10% * 10
		
	// Station Waage
		WaageNachricht		: STRING;	// Nachricht von Wagezelle (fur virtuelle Inbetriebnahme notig)
		WaageNull			: BOOL;		// TARA Waage
		WaageMesswert		: INT;		// Messwert der Waage
		
	// Station Behalteridentifikation
		IdSensorTrager			: BOOL;		// Sensor bei Erkennung eines Datentrager
		IdNachricht				: STRING;	// Nachricht von RFID-System (fur virtuelle Inbetriebnahme notig)
		Seriennummer			: STRING;	// Seriennummer RFID-Tag
		
	//Temperierstation
		Ventilator1 AT %Q*	: BOOL;		// Ventilator 1
		Ventilator2 AT %Q*	: BOOL;		// Ventilator 2
		Ventilator3 AT %Q*	: BOOL;		// Ventilator 3
		TempSens1 AT%I*		: UINT;		// Temperatursensor 1
		TempSens2 AT%I*		: UINT;		// Temperatursensor 2
		Heizpatrone AT%Q*	: UINT;		// Heizpatronen
		MaxTemp				: UINT := 5500;		// in °C * 100
		
	// Station Manipulator
		ManEndX AT%I* 		: BOOL := TRUE;		// Manipulator min Endschalter Achse x
		ManEndY AT%I* 		: BOOL := TRUE;		// Manipulator min Endschalter Achse y
		ManEndZ AT%I* 		: BOOL := TRUE;		// Manipulator min Endschalter Achse z
		ManEndGrip AT%I* 	: BOOL := TRUE;		// Manipulator min Endschalter Achse Gripper
		ManEndX2 AT%I* 		: BOOL := TRUE;		// Manipulator max Endschalter Achse x
		ManEndY2 AT%I* 		: BOOL := TRUE;		// Manipulator max Endschalter Achse y
		ManEndZ2 AT%I* 		: BOOL := TRUE;		// Manipulator max Endschalter Achse z
		ManEndGrip2 AT%I* 	: BOOL := TRUE;		// Manipulator max Endschalter Achse Gripper
		Brake	AT%Q*		: BOOL := FALSE;	// Bremse Achse z
		
		ManAchseX			: AXIS_REF;			// Manipulator NC-Achse x
		ManAchseY			: AXIS_REF;			// Manipulator NC-Achse y
		ManAchseZ			: AXIS_REF;			// Manipulator NC-Achse z
		ManAchseGrip		: AXIS_REF; 		// Manipulator NC-Achse Gripper
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>