<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="PRG_Lab" Id="{56de3c86-00a0-4a8b-ae04-45bb1f6f07de}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_Lab
VAR
	fbStatusLight : FB_StatusLight;
	
	fbSeparator : FB_Separator;
	
	fbRFID : FB_RFID;
	
	fbConveyor : FB_Conveyor;
	
	fbFillLevel1 : FB_FillLevel;
	fbFillLevel2 : FB_FillLevel;
	fbFillLevel3 : FB_FillLevel;
	
	fbDisp1 : FB_Dispenser;
	fbDisp2 : FB_Dispenser;
	fbDisp3 : FB_Dispenser;
	
	fbManX  : FB_ManipulatorAxis;
	fbManY  : FB_ManipulatorAxis;
	fbManZ  : FB_ManipulatorAxis;
	fbManGrip 	: FB_ManipulatorAxis;
	
	fbWaage : FB_Waage;
	
	fbHeating : FB_HeatingSystem;
	
	nState : INT := 0;
	nCount : INT := 0;
	
	timer : TON;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbStatusLight(
	bRed=> IFC_HW.AmpelRot,
	bYellow=> IFC_HW.AmpelGelb,
	bGreen=> IFC_HW.AmpelGrun);

fbSeparator(
	bSensor1:= IFC_HW.EinzelSens1, 
	bSensor2:= IFC_HW.EinzelSens2, 
	bR1AKT1=> IFC_HW.R1AKT1, 
	bR1AKT2=> IFC_HW.R1AKT2,
	bR2AKT1=> IFC_HW.R2AKT1, 
	bR2AKT2=> IFC_HW.R2AKT2,
	bNoBottle=> IFC_HW.NoBottle,	
	bWrongBottle=> IFC_HW.WrongBottle);
	
fbRFID( 
	sSeriennummer=> IFC_HW.IdNachricht);

fbConveyor(
	ax:= IFC_HW.BandMotor);

fbFillLevel1(
	nLevelIn:= IFC_HW.FillSens1,
	nMaxLevel:= IFC_HW.MaxFillLevel,
	nLevelPercent=> IFC_HW.FillLevelPercent1,
	nLevelGramm=> IFC_HW.FillLevelGramm1);
fbFillLevel2(
	nLevelIn:= IFC_HW.FillSens2,
	nMaxLevel:= IFC_HW.MaxFillLevel,
	nLevelPercent=> IFC_HW.FillLevelPercent2,
	nLevelGramm=> IFC_HW.FillLevelGramm2);
fbFillLevel3(
	nLevelIn:= IFC_HW.FillSens3,
	nMaxLevel:= IFC_HW.MaxFillLevel,
	nLevelPercent=> IFC_HW.FillLevelPercent3,
	nLevelGramm=> IFC_HW.FillLevelGramm3);
	
fbDisp1(
	ax:= IFC_HW.BandExtruder1);
fbDisp2(
	ax:= IFC_HW.BandExtruder2);
fbDisp3(
	ax:= IFC_HW.BandExtruder3);

fbManX(
	aAchse:= IFC_HW.ManAchseX,
	bEndSchalterMin:=IFC_HW.ManEndX,
	bEndSchalterMax:=IFC_HW.ManEndX2);
fbManY(
	aAchse:= IFC_HW.ManAchseY,
	bEndSchalterMin:=IFC_HW.ManEndY,
	bEndSchalterMax:=IFC_HW.ManEndY2);
fbManZ(
	aAchse:= IFC_HW.ManAchseZ,
	bEndSchalterMin:=IFC_HW.ManEndZ,
	bEndSchalterMax:=IFC_HW.ManEndZ2);
	
fbManGrip(
	aAchse:= IFC_HW.ManAchseGrip,
	bEndSchalterMin:=IFC_HW.ManEndGrip,
	bEndSchalterMax:=IFC_HW.ManEndGrip2);
	
fbWaage(
	bNullsetzen:= IFC_HW.WaageNull,
	iMesswert=> IFC_HW.WaageMesswert);
	
fbHeating(
	nMaxTemp:= IFC_HW.MaxTemp,
	nTemp:= (IFC_HW.TempSens1 + IFC_HW.TempSens2)/2,
	bVentilator1=> IFC_HW.Ventilator1,
	bVentilator2=> IFC_HW.Ventilator2,
	bVentilator3=> IFC_HW.Ventilator3,
	nHeizpatrone=> IFC_HW.Heizpatrone);	
	
CASE nState OF
0: // Off
	fbStatusLight.eStatus := State.Off;
	fbSeparator.bEnable := FALSE;
	fbConveyor.bEnable := FALSE;
	fbDisp1.bEnable := FALSE;
	fbDisp2.bEnable := FALSE;
	fbDisp3.bEnable := FALSE;
	fbHeating.bEnable := FALSE;
	fbManX.bEnable := FALSE;
	fbManY.bEnable := FALSE;
	fbManZ.bEnable := FALSE;
	fbManGrip.bEnable := FALSE;
	
	nState := nState + 1;
	
1: // Turn on
	fbStatusLight.eStatus := State.Busy;
	fbSeparator.bEnable := TRUE;
	fbConveyor.bEnable := TRUE;
	fbDisp1.bEnable := TRUE;
	fbDisp2.bEnable := TRUE;
	fbDisp3.bEnable := TRUE;
	fbHeating.bEnable := TRUE;
	IFC_HW.Brake := TRUE;
	fbManZ.bEnable := TRUE;
	IF fbManZ.eOutState = State.Ready THEN
		IFC_HW.Brake := FALSE;
		fbManX.bEnable := TRUE;
		fbManY.bEnable := TRUE;
		fbManGrip.bEnable := TRUE;
	END_IF
	
	IF fbSeparator.eStatus = State.Ready
		AND fbConveyor.eStatus = State.Ready
		AND fbDisp1.eStatus = State.Ready
		AND fbDisp2.eStatus = State.Ready
		AND fbDisp3.eStatus = State.Ready
		AND fbHeating.eStatus = State.Ready
		AND fbManX.eOutState = State.Ready
		AND fbManY.eOutState = State.Ready
		AND fbManGrip.eOutState = State.Ready THEN
		nState := nState + 1;
	END_IF

2: // check error
	IF nCount >= 4 THEN
		fbStatusLight.eStatus := State.Error;
		IFC_HW.StorageFull := TRUE;
		IF GVL_SAFETY.safeOverruled AND GVL_SAFETY.bAcknowledge_Button THEN
			IFC_HW.StorageFull := FALSE;
			GVL_SAFETY.safeOverruled := FALSE;
			nCount := 0;
			nState := nState + 1;
		END_IF
	ELSIF  NOT IFC_HW.EinzelSens2 AND NOT IFC_HW.EinzelSens3 THEN
		fbStatusLight.eStatus := State.Error;
		IFC_HW.NoBottle := TRUE;
		IF GVL_SAFETY.bAcknowledge_Button THEN
			IFC_HW.NoBottle := FALSE;
			nState := 1;
		END_IF
	ELSIF (NOT IFC_HW.EinzelSens2 AND IFC_HW.EinzelSens3) OR (IFC_HW.EinzelSens2 AND IFC_HW.EinzelSens3)THEN
		fbStatusLight.eStatus := State.Error;
		IFC_HW.WrongBottle := TRUE;
		IF GVL_SAFETY.bAcknowledge_Button THEN
			IFC_HW.WrongBottle := FALSE;
			nState := 1;
		END_IF
	ELSIF IFC_HW.FillLevelPercent1 < 5 OR IFC_HW.FillLevelPercent2 < 5 OR IFC_HW.FillLevelPercent3 < 5 THEN
		fbStatusLight.eStatus := State.Error;
		IFC_HW.GranulateEmpty := TRUE;
		IF GVL_SAFETY.bAcknowledge_Button THEN
			IFC_HW.GranulateEmpty := FALSE;
			nState := 1;
		END_IF
	ELSE
		nState := nState + 1;
	END_IF
	
3: // All systems ready
	fbStatusLight.eStatus := State.Ready;
	
	IF (GVL_SAFETY.bBetrieb_Button OR GVL_VIS.bStartFactoryHMI) AND NOT GVL_SAFETY.safeOverruled THEN
		GVL_SAFETY.bBetrieb_Button := FALSE; // reset
		nState := nState + 1;
	END_IF
	
4: // read RFID
	fbStatusLight.eStatus := State.Busy;
	//fbRFID.bSensorTrager := TRUE;
	
	//IF fbRFID.bFertig THEN
		//fbRFID.bSensorTrager := FALSE;
		nState := nState + 1;
	//END_IF
	
5: // separate container
	fbSeparator.bExecute := TRUE;
	
	IF fbSeparator.eStatus = State.Done THEN
		fbSeparator.bExecute := FALSE;
		nState := nState + 1;
	END_IF
	
6: // turn on conveyor and wait for container to arrive at BandSens1
	fbConveyor.eDirection := MC_Direction.MC_Positive_Direction;
	fbConveyor.nVel := 40;
	fbConveyor.bExecute := TRUE;
	
	IF IFC_HW.BandSens1 THEN
		timer(IN := TRUE, PT := T#500MS);
		IF timer.Q THEN
			fbConveyor.bExecute := FALSE;
			timer(IN := FALSE);
			nState := nState + 1;
		END_IF
	END_IF
	
7: // fill container from first dispenser
	fbDisp1.nDispenseGrams := IFC_HW.BandFullmenge1;
	fbDisp1.bExecute := TRUE;
	
	IF fbDisp1.eStatus = State.Done THEN
		fbDisp1.bExecute := FALSE;
		nState := nState + 1;
	END_IF
	
8: // continue conveyor to second dispenser (BandSens2)
	fbConveyor.eDirection := MC_Direction.MC_Positive_Direction;
	fbConveyor.nVel := 40;
	
	fbConveyor.bExecute := TRUE;
	
	IFC_HW.BandHub1 := TRUE;
	
	IF IFC_HW.BandSens2 THEN
		timer(IN := TRUE, PT := T#500MS);
		IF timer.Q THEN
			fbConveyor.bExecute := FALSE;
			IFC_HW.BandHub1 := FALSE;
			timer(IN := FALSE);
			nState := nState + 1;
		END_IF
	END_IF
	
9: // fill container from second dispenser
	fbDisp2.nDispenseGrams := IFC_HW.BandFullmenge2;
	fbDisp2.bExecute := TRUE;
	
	IF fbDisp2.eStatus = State.Done THEN
		fbDisp2.bExecute := FALSE;
		nState := nState + 1;
	END_IF
	
10: // continue conveyor to third dispenser (BandSens3)
	fbConveyor.eDirection := MC_Direction.MC_Positive_Direction;
	fbConveyor.nVel := 40;
	fbConveyor.bExecute := TRUE;
	
	IFC_HW.BandHub2 := TRUE;
	
	IF IFC_HW.BandSens3 THEN
		timer(IN := TRUE, PT := T#500MS);
		IF timer.Q THEN
			fbConveyor.bExecute := FALSE;
			IFC_HW.BandHub2 := FALSE;
			timer(IN := FALSE);
			nState := nState + 1;
		END_IF
	END_IF
	
11: // fill container from second dispenser
	fbDisp3.nDispenseGrams := IFC_HW.BandFullmenge3;
	fbDisp3.bExecute := TRUE;
	
	IF fbDisp3.eStatus = State.Done THEN
		fbDisp3.bExecute := FALSE;
		nState := nState + 1;
	END_IF
	
12: // continue conveyor to end of line (BandSens4)
	fbConveyor.eDirection := MC_Direction.MC_Positive_Direction;
	fbConveyor.nVel := 40;
	fbConveyor.bExecute := TRUE;
	
	IFC_HW.BandHub3 := TRUE;
	
	IF IFC_HW.BandSens4 THEN
		timer(IN := TRUE, PT := T#500MS);
		IF timer.Q THEN
			fbConveyor.bExecute := FALSE;
			IFC_HW.BandHub3 := FALSE;
			timer(IN := FALSE);
			nState := nState + 1;
		END_IF
	END_IF

13: // open Gripper
	fbManGrip.fVelocity := 3;	
	fbManGrip.fPosition := 6;
	
	fbManGrip.bExecute := TRUE;	
	
	IF fbManGrip.eOutState = State.Done THEN
		fbManGrip.bExecute := FALSE;
		nState := nState + 1;
	END_IF
		
14: // goto container x, y
	fbManX.fVelocity := 30;
	fbManY.fVelocity := 30;
	
	fbManX.fPosition := 31;
	fbManY.fPosition := 145;
	
	fbManX.bExecute := TRUE;
	fbManY.bExecute := TRUE;
	
	IF fbManX.eOutState = State.Done AND fbManY.eOutState = State.Done THEN
		fbManX.bExecute := FALSE;
		fbManY.bExecute := FALSE;
		nState := nState + 1;
	END_IF
	
15: // goto container z	
	fbManZ.fVelocity := 30;
	
	fbManZ.fPosition := 132;
	
	IFC_HW.Brake := TRUE;
	fbManZ.bExecute := TRUE;
	
	IF fbManZ.eOutState = State.Done THEN
		fbManZ.bExecute := FALSE;
		IFC_HW.Brake := FALSE;
		nState := nState + 1;
	END_IF

16: // close Gripper
	fbManGrip.fPosition := 8.5;
	
	fbManGrip.bExecute := TRUE;	
	
	IF fbManGrip.eOutState = State.Done THEN
		fbManGrip.bExecute := FALSE;
		nState := nState + 1;
	END_IF

17: // move Z UP
	fbManZ.fPosition := 70;

	IFC_HW.Brake := TRUE;
	fbManZ.bExecute := TRUE;	
	
	IF fbManZ.eOutState = State.Done THEN
		fbManZ.bExecute := FALSE;
		IFC_HW.Brake := FALSE;
		nState := nState + 1;
	END_IF

18: // goto scale x, y
	fbManX.fPosition := 37;
	fbManY.fPosition := 7;
	
	fbManX.bExecute := TRUE;
	fbManY.bExecute := TRUE;
	
	IF fbManX.eOutState = State.Done AND fbManY.eOutState = State.Done THEN
		fbManX.bExecute := FALSE;
		fbManY.bExecute := FALSE;
		nState := nState + 1;
	END_IF

19: // set scale to zero	
	//IFC_HW.WaageNull := TRUE;
	
	//IF fBWaage.iMesswert = 0 THEN
		nState := nState + 1;
	//END_IF

20: // goto scale z	
	fbManZ.fPosition := 132.5;
	
	IFC_HW.Brake := TRUE;
	fbManZ.bExecute := TRUE;
	
	IF fbManZ.eOutState = State.Done THEN
		fbManZ.bExecute := FALSE;
		IFC_HW.Brake := FALSE;
		nState := nState + 1;
	END_IF
	
21: // open Gripper		
	fbManGrip.fPosition := 6;
	
	fbManGrip.bExecute := TRUE;
	
	IF fbManGrip.eOutState = State.Done THEN
		fbManGrip.bExecute := FALSE;
		nState := nState + 1;
	END_IF
	
22: // scale 
	nState := nState + 1;
	
23: // close Gripper
	fbManGrip.fPosition := 8.5;	
	
	fbManGrip.bExecute := TRUE;	
	
	IF fbManGrip.eOutState = State.Done THEN
		fbManGrip.bExecute := FALSE;
		nState := nState + 1;
	END_IF

24: // move Z UP	
	fbManZ.fPosition := 70;
	
	IFC_HW.Brake := TRUE;
	fbManZ.bExecute := TRUE;
	
	IF fbManZ.eOutState = State.Done THEN
		fbManZ.bExecute := FALSE;
		IFC_HW.Brake := FALSE;
		nState := nState + 1;
	END_IF
	
25: // goto heating x, y
	fbManX.fPosition := 220.5;
	fbManY.fPosition := 6;
	
	fbManX.bExecute := TRUE;
	fbManY.bExecute := TRUE;
	
	IF fbManX.eOutState = State.Done AND fbManY.eOutState = State.Done THEN
		fbManX.bExecute := FALSE;
		fbManY.bExecute := FALSE;
		nState := nState + 1;
	END_IF

26: // goto heating z	
	fbManZ.fPosition := 180;
	
	IFC_HW.Brake := TRUE;
	fbManZ.bExecute := TRUE;
	
	IF fbManZ.eOutState = State.Done THEN
		fbManZ.bExecute := FALSE;
		IFC_HW.Brake := FALSE;
		nState := nState + 1;
	END_IF

27: // open Gripper	
	fbManGrip.fPosition := 6;
	
	fbManGrip.bExecute := TRUE;	
	
	IF fbManGrip.eOutState = State.Done THEN
		fbManGrip.bExecute := FALSE;
		nState := nState + 1;
	END_IF
	
28: // heating 
	fbHeating.bExecute := TRUE;
	
	IF fbHeating.eStatus = State.Done THEN
		fbHeating.bExecute := FALSE;
		nState := nState + 1;
	END_IF

29: // close Gripper
	fbManGrip.fPosition := 8.5;	
	
	fbManGrip.bExecute := TRUE;	
	
	IF fbManGrip.eOutState = State.Done THEN
		fbManGrip.bExecute := FALSE;
		nState := nState + 1;
	END_IF

30: // move Z UP	
	fbManZ.fPosition := 70;
	
	IFC_HW.Brake := TRUE;
	fbManZ.bExecute := TRUE;
	
	IF fbManZ.eOutState = State.Done THEN
		fbManZ.bExecute := FALSE;
		IFC_HW.Brake := FALSE;
		nState := nState + 1;
	END_IF

31: // goto storage x, y
	CASE nCount OF		
	0: // storage 1
		fbManX.fPosition := 110.5;
	1: // storage 2
		fbManX.fPosition := 161.5;
	2: // storage 3
		fbManX.fPosition := 212.5;
	3: // storage 4
		fbManX.fPosition := 263;	
	END_CASE
	
	fbManY.fPosition := 138;
	
	fbManX.bExecute := TRUE;
	fbManY.bExecute := TRUE;
	
	IF fbManX.eOutState = State.Done AND fbManY.eOutState = State.Done THEN
		fbManX.bExecute := FALSE;
		fbManY.bExecute := FALSE;
		nCount := nCount + 1;
		nState := nState + 1;
	END_IF

32: // goto storage z	
	fbManZ.fPosition := 128;
	
	IFC_HW.Brake := TRUE;
	fbManZ.bExecute := TRUE;
	
	IF fbManZ.eOutState = State.Done THEN
		fbManZ.bExecute := FALSE;
		IFC_HW.Brake := FALSE;
		nState := nState + 1;
	END_IF	
	
33: // open Gripper		
	fbManGrip.fPosition := 6;
	
	fbManGrip.bExecute := TRUE;
	
	IF fbManGrip.eOutState = State.Done THEN
		fbManGrip.bExecute := FALSE;
		nState := nState + 1;
	END_IF
	
34: // move Z UP
	fbManZ.fPosition := 80;
	
	IFC_HW.Brake := TRUE;
	fbManZ.bExecute := TRUE;
	
	IF fbManZ.eOutState = State.Done THEN
		fbManZ.bExecute := FALSE;
		IFC_HW.Brake := FALSE;
		nState := nState + 1;
	END_IF
	
35: // goto container x, y
	fbManX.fPosition := 31;
	fbManY.fPosition := 145;
	
	fbManX.bExecute := TRUE;
	fbManY.bExecute := TRUE;
	
	IF fbManX.eOutState = State.Done AND fbManY.eOutState = State.Done THEN
		fbManX.bExecute := FALSE;
		fbManY.bExecute := FALSE;
		nState := nState + 1;
	END_IF
	
36: // Done
	fbStatusLight.eStatus := State.Done;
	
	timer(IN := TRUE, PT := T#3000MS);
	
	IF timer.Q THEN
		timer(IN := FALSE);
		nState := 1;
	END_IF
	
END_CASE]]></ST>
    </Implementation>
    <LineIds Name="PRG_Lab">
      <LineId Id="5" Count="0" />
      <LineId Id="20" Count="2" />
      <LineId Id="33" Count="0" />
      <LineId Id="322" Count="6" />
      <LineId Id="331" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="332" Count="0" />
      <LineId Id="341" Count="0" />
      <LineId Id="345" Count="0" />
      <LineId Id="343" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="356" Count="0" />
      <LineId Id="358" Count="13" />
      <LineId Id="357" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="40" Count="4" />
      <LineId Id="383" Count="0" />
      <LineId Id="271" Count="0" />
      <LineId Id="437" Count="15" />
      <LineId Id="46" Count="0" />
      <LineId Id="402" Count="1" />
      <LineId Id="407" Count="0" />
      <LineId Id="404" Count="0" />
      <LineId Id="401" Count="0" />
      <LineId Id="391" Count="5" />
      <LineId Id="381" Count="0" />
      <LineId Id="55" Count="1" />
      <LineId Id="60" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="67" Count="3" />
      <LineId Id="278" Count="0" />
      <LineId Id="71" Count="2" />
      <LineId Id="453" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="829" Count="0" />
      <LineId Id="76" Count="2" />
      <LineId Id="80" Count="4" />
      <LineId Id="279" Count="0" />
      <LineId Id="1176" Count="0" />
      <LineId Id="462" Count="0" />
      <LineId Id="456" Count="0" />
      <LineId Id="1140" Count="0" />
      <LineId Id="457" Count="0" />
      <LineId Id="459" Count="0" />
      <LineId Id="461" Count="0" />
      <LineId Id="458" Count="0" />
      <LineId Id="85" Count="0" />
      <LineId Id="88" Count="1" />
      <LineId Id="91" Count="2" />
      <LineId Id="280" Count="0" />
      <LineId Id="94" Count="1" />
      <LineId Id="455" Count="0" />
      <LineId Id="97" Count="0" />
      <LineId Id="90" Count="0" />
      <LineId Id="1247" Count="0" />
      <LineId Id="1249" Count="5" />
      <LineId Id="1281" Count="0" />
      <LineId Id="1255" Count="25" />
      <LineId Id="1248" Count="0" />
      <LineId Id="1033" Count="0" />
      <LineId Id="98" Count="3" />
      <LineId Id="176" Count="0" />
      <LineId Id="102" Count="1" />
      <LineId Id="349" Count="0" />
      <LineId Id="348" Count="0" />
      <LineId Id="1106" Count="0" />
      <LineId Id="350" Count="3" />
      <LineId Id="355" Count="0" />
      <LineId Id="354" Count="0" />
      <LineId Id="104" Count="5" />
      <LineId Id="111" Count="0" />
      <LineId Id="110" Count="0" />
      <LineId Id="1032" Count="0" />
      <LineId Id="112" Count="0" />
      <LineId Id="114" Count="2" />
      <LineId Id="904" Count="0" />
      <LineId Id="118" Count="0" />
      <LineId Id="963" Count="2" />
      <LineId Id="967" Count="1" />
      <LineId Id="966" Count="0" />
      <LineId Id="120" Count="2" />
      <LineId Id="124" Count="3" />
      <LineId Id="147" Count="0" />
      <LineId Id="128" Count="1" />
      <LineId Id="1031" Count="0" />
      <LineId Id="130" Count="0" />
      <LineId Id="132" Count="1" />
      <LineId Id="330" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="179" Count="1" />
      <LineId Id="907" Count="0" />
      <LineId Id="970" Count="3" />
      <LineId Id="977" Count="0" />
      <LineId Id="974" Count="2" />
      <LineId Id="131" Count="0" />
      <LineId Id="1029" Count="0" />
      <LineId Id="139" Count="0" />
      <LineId Id="141" Count="3" />
      <LineId Id="149" Count="0" />
      <LineId Id="145" Count="0" />
      <LineId Id="138" Count="0" />
      <LineId Id="1028" Count="0" />
      <LineId Id="151" Count="3" />
      <LineId Id="177" Count="1" />
      <LineId Id="913" Count="0" />
      <LineId Id="978" Count="7" />
      <LineId Id="159" Count="0" />
      <LineId Id="1030" Count="0" />
      <LineId Id="160" Count="6" />
      <LineId Id="150" Count="0" />
      <LineId Id="1027" Count="0" />
      <LineId Id="167" Count="0" />
      <LineId Id="169" Count="3" />
      <LineId Id="183" Count="0" />
      <LineId Id="921" Count="0" />
      <LineId Id="986" Count="7" />
      <LineId Id="919" Count="0" />
      <LineId Id="466" Count="0" />
      <LineId Id="478" Count="0" />
      <LineId Id="485" Count="0" />
      <LineId Id="480" Count="1" />
      <LineId Id="1152" Count="1" />
      <LineId Id="482" Count="2" />
      <LineId Id="473" Count="1" />
      <LineId Id="187" Count="2" />
      <LineId Id="191" Count="1" />
      <LineId Id="194" Count="0" />
      <LineId Id="196" Count="0" />
      <LineId Id="198" Count="2" />
      <LineId Id="202" Count="0" />
      <LineId Id="214" Count="1" />
      <LineId Id="203" Count="0" />
      <LineId Id="201" Count="0" />
      <LineId Id="488" Count="0" />
      <LineId Id="486" Count="0" />
      <LineId Id="491" Count="0" />
      <LineId Id="1149" Count="0" />
      <LineId Id="494" Count="0" />
      <LineId Id="1141" Count="0" />
      <LineId Id="496" Count="1" />
      <LineId Id="499" Count="1" />
      <LineId Id="502" Count="0" />
      <LineId Id="1142" Count="0" />
      <LineId Id="503" Count="3" />
      <LineId Id="509" Count="1" />
      <LineId Id="1151" Count="0" />
      <LineId Id="1150" Count="0" />
      <LineId Id="511" Count="2" />
      <LineId Id="489" Count="0" />
      <LineId Id="514" Count="0" />
      <LineId Id="516" Count="0" />
      <LineId Id="1148" Count="0" />
      <LineId Id="1147" Count="0" />
      <LineId Id="1143" Count="0" />
      <LineId Id="517" Count="0" />
      <LineId Id="519" Count="2" />
      <LineId Id="1144" Count="0" />
      <LineId Id="522" Count="0" />
      <LineId Id="490" Count="0" />
      <LineId Id="523" Count="1" />
      <LineId Id="528" Count="9" />
      <LineId Id="515" Count="0" />
      <LineId Id="570" Count="0" />
      <LineId Id="540" Count="0" />
      <LineId Id="572" Count="4" />
      <LineId Id="571" Count="0" />
      <LineId Id="541" Count="0" />
      <LineId Id="544" Count="1" />
      <LineId Id="1145" Count="0" />
      <LineId Id="546" Count="3" />
      <LineId Id="1146" Count="0" />
      <LineId Id="550" Count="0" />
      <LineId Id="539" Count="0" />
      <LineId Id="538" Count="0" />
      <LineId Id="560" Count="0" />
      <LineId Id="563" Count="1" />
      <LineId Id="1161" Count="1" />
      <LineId Id="565" Count="2" />
      <LineId Id="551" Count="0" />
      <LineId Id="568" Count="1" />
      <LineId Id="900" Count="0" />
      <LineId Id="608" Count="0" />
      <LineId Id="610" Count="0" />
      <LineId Id="612" Count="1" />
      <LineId Id="1159" Count="1" />
      <LineId Id="614" Count="2" />
      <LineId Id="609" Count="0" />
      <LineId Id="617" Count="0" />
      <LineId Id="619" Count="0" />
      <LineId Id="621" Count="0" />
      <LineId Id="1154" Count="0" />
      <LineId Id="1156" Count="0" />
      <LineId Id="1158" Count="0" />
      <LineId Id="622" Count="2" />
      <LineId Id="1157" Count="0" />
      <LineId Id="625" Count="0" />
      <LineId Id="607" Count="0" />
      <LineId Id="869" Count="0" />
      <LineId Id="628" Count="10" />
      <LineId Id="627" Count="0" />
      <LineId Id="639" Count="0" />
      <LineId Id="641" Count="0" />
      <LineId Id="644" Count="1" />
      <LineId Id="1163" Count="0" />
      <LineId Id="646" Count="3" />
      <LineId Id="1165" Count="0" />
      <LineId Id="650" Count="0" />
      <LineId Id="640" Count="0" />
      <LineId Id="652" Count="0" />
      <LineId Id="654" Count="0" />
      <LineId Id="656" Count="1" />
      <LineId Id="1166" Count="1" />
      <LineId Id="658" Count="5" />
      <LineId Id="673" Count="2" />
      <LineId Id="677" Count="0" />
      <LineId Id="676" Count="0" />
      <LineId Id="664" Count="2" />
      <LineId Id="668" Count="1" />
      <LineId Id="1171" Count="1" />
      <LineId Id="670" Count="2" />
      <LineId Id="653" Count="0" />
      <LineId Id="678" Count="1" />
      <LineId Id="681" Count="0" />
      <LineId Id="1168" Count="1" />
      <LineId Id="682" Count="0" />
      <LineId Id="1170" Count="0" />
      <LineId Id="683" Count="1" />
      <LineId Id="1173" Count="0" />
      <LineId Id="685" Count="0" />
      <LineId Id="618" Count="0" />
      <LineId Id="687" Count="0" />
      <LineId Id="700" Count="0" />
      <LineId Id="711" Count="1" />
      <LineId Id="716" Count="0" />
      <LineId Id="719" Count="1" />
      <LineId Id="715" Count="0" />
      <LineId Id="721" Count="2" />
      <LineId Id="713" Count="0" />
      <LineId Id="701" Count="4" />
      <LineId Id="733" Count="0" />
      <LineId Id="707" Count="2" />
      <LineId Id="962" Count="0" />
      <LineId Id="710" Count="0" />
      <LineId Id="688" Count="0" />
      <LineId Id="755" Count="0" />
      <LineId Id="757" Count="0" />
      <LineId Id="760" Count="1" />
      <LineId Id="1174" Count="0" />
      <LineId Id="762" Count="3" />
      <LineId Id="1175" Count="0" />
      <LineId Id="766" Count="0" />
      <LineId Id="736" Count="0" />
      <LineId Id="756" Count="0" />
      <LineId Id="744" Count="0" />
      <LineId Id="746" Count="1" />
      <LineId Id="1209" Count="1" />
      <LineId Id="748" Count="2" />
      <LineId Id="737" Count="0" />
      <LineId Id="752" Count="0" />
      <LineId Id="751" Count="0" />
      <LineId Id="739" Count="0" />
      <LineId Id="1211" Count="1" />
      <LineId Id="740" Count="0" />
      <LineId Id="1213" Count="0" />
      <LineId Id="741" Count="1" />
      <LineId Id="1214" Count="0" />
      <LineId Id="743" Count="0" />
      <LineId Id="686" Count="0" />
      <LineId Id="753" Count="0" />
      <LineId Id="767" Count="0" />
      <LineId Id="771" Count="9" />
      <LineId Id="754" Count="0" />
      <LineId Id="781" Count="0" />
      <LineId Id="1034" Count="2" />
      <LineId Id="1038" Count="0" />
      <LineId Id="1042" Count="0" />
      <LineId Id="1037" Count="0" />
      <LineId Id="1041" Count="0" />
      <LineId Id="1039" Count="1" />
      <LineId Id="790" Count="0" />
      <LineId Id="66" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>